--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "core-js": "^3.6.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
@@ -51,5 +51,8 @@
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
     "url-loader": "^4.1.1"
+  },
+  "resolutions": {
+    "@types/react": "17.0.42"
   }
 }
