--- a/plugins/sample/project.json
+++ b/plugins/sample/project.json
@@ -1,7 +1,7 @@
 {
   "name": "sample",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/sample/src",
+  "sourceRoot": "plugins/sample/src",
   "projectType": "application",
   "targets": {
     "build": {
@@ -10,16 +10,16 @@
       "defaultConfiguration": "production",
       "options": {
         "compiler": "babel",
-        "outputPath": "dist/apps/sample",
-        "index": "apps/sample/src/index.html",
+        "outputPath": "dist/plugins/sample",
+        "index": "plugins/sample/src/index.html",
         "baseHref": "/",
-        "main": "apps/sample/src/main.tsx",
-        "polyfills": "apps/sample/src/polyfills.ts",
-        "tsConfig": "apps/sample/tsconfig.app.json",
-        "assets": ["apps/sample/src/favicon.ico", "apps/sample/src/assets"],
+        "main": "plugins/sample/src/main.tsx",
+        "polyfills": "plugins/sample/src/polyfills.ts",
+        "tsConfig": "plugins/sample/tsconfig.app.json",
+        "assets": ["plugins/sample/src/assets"],
         "styles": [],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "plugins/sample/webpack.config.ts"
       },
       "configurations": {
         "development": {
@@ -31,8 +31,8 @@
         "production": {
           "fileReplacements": [
             {
-              "replace": "apps/sample/src/environments/environment.ts",
-              "with": "apps/sample/src/environments/environment.prod.ts"
+              "replace": "plugins/sample/src/environments/environment.ts",
+              "with": "plugins/sample/src/environments/environment.prod.ts"
             }
           ],
           "optimization": true,
@@ -65,14 +65,14 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/sample/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["plugins/sample/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/sample/jest.config.ts",
+        "jestConfig": "plugins/sample/jest.config.ts",
         "passWithNoTests": true
       }
     }
