--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
+    "@types/lodash": "latest",
     "@types/node": "16.11.7",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/webpack-livereload-plugin": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
@@ -41,16 +43,20 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "lodash": "^4.17.21",
     "nx": "15.4.4",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
+    "replace-in-file-webpack-plugin": "^1.0.6",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "webpack-livereload-plugin": "^3.0.2"
   },
   "resolutions": {
     "@types/react": "17.0.42"
